<resources>
    <string name="app_name">FirstApp</string>

    <!--빌드-->


    <!-- 챔피언 정보 -->
    <string name="champion_see_build_btn">빌드보기</string>
    <string name="champion_release_date_title">출시일</string>

    <!--롤 스펠 텍스트 -->
    <string name="tel">텔레포트</string>
    <string name="smite">강타</string>
    <string name="sheild">실드</string>
    <string name="totheking">왕을 향해!</string>
    <string name="ghost">유체화</string>
    <string name="ignite">점화</string>
    <string name="lol">리그 오브 레전드 스펠</string>
    <string name="HowlingAbyss">칼바람 스펠 </string>
    <string name="clean">정화</string>
    <string name="blue">총명</string>
    <string name="exhasuted">탈진</string>
    <string name="aiblue">표식</string>
    <string name="flash">점멸</string>
    <string name="heal">힐</string>

    <string name="includelol">(롤 스펠 포함)</string>

    <string name="lolspell">롤 스펠 모음</string>

    <string name="nextDialogText">계속 하기</string>
    <string name="smiteDialogText">대상 에픽 및 대형/중형 몬스터, 혹은 적 미니언에게 450의 고정 피해를 입힙니다. 몬스터에게 사용 시 체력도 90 + 최대 체력의 10%만큼 회복됩니다.</string>
    <string name="smiteDialogTitle">강타</string>
    <string name="telDialogText">"4초 동안 정신 집중을 한 후 아군 구조물, 미니언, 혹은 와드로 순간이동하고 3초간 이동 속도가 50% 증가합니다."</string>
    <string name="telDialogTitle">텔</string>
    <string name="sheildDialogText">2초 동안 방어막으로 감싸 피해를 115~455만큼 흡수합니다.</string>
    <string name="sheildDialogTitle">실드</string>
    <string name="flashDialogText">커서 방향으로 챔피언이 짧은 거리를 순간이동 합니다.</string>
    <string name="flashDialogTitle">점멸</string>
    <string name="healDialogText">챔피언과 대상 아군 챔피언의 체력을 90~345만큼 회복시키고 1초 동안 이동 속도가 30% 증가합니다. 최근 소환사 주문 회복의 영향을 받은 유닛의 경우 치유량이 절반만 적용됩니다.</string>
    <string name="healDialogTitle">힐</string>
    <string name="fireDialogText">대상 적 챔피언을 불태워, 5초에 걸쳐 70~410의 고정 피해를 입히고 그동안 적의 위치를 드러내며 고통스러운 상처를 적용합니다.</string>
    <string name="fireDialogTitle">점화</string>
    <string name="cleanDialogText">챔피언에 적용되는 모든 방해 효과와 (제압 및 공중으로 띄우는 효과 제외) 해로운 소환사 주문 효과를 제거하고 다음 3초 동안 방해 효과의 지속 시간을 65% 감소시킵니다.</string>
    <string name="cleanDialogTitle">정화</string>
    <string name="exhaustedDialogText">커서 방향으로 챔피언이 짧은 거리를 순간이동 합니다.</string>
    <string name="exhaustedDialogTitle">탈진</string>
    <string name="tothekingDialogText">포로 왕의 곁으로 빠르게 이동합니다.</string>
    <string name="tothekingDialogTitle">왕을 향해!</string>
    <string name="throwforoDialogText">2초 동안 방어막으로 감싸 피해를 115~455 만큼 흡수합니다.</string>
    <string name="throwforoDialogTitle">눈 던지기</string>
    <string name="blueDialogText">챔피언의 최대 마나가 50%, 주변 아군의 최대 마나가 25%가 회복됩니다.</string>
    <string name="blueDialogTitle">총명</string>
    <string name="ghostDialogText">챔피언이 10초 동안 유닛과 충돌하지 않게 되며 챔피언 레벨에 따라 이동 속도가 24 ~ 48% 증가합니다.
 처치 관여 시 챔피언 레벨에 따라 유체화 지속 시간이 4 ~ 7초 늘어납니다.</string>
    <string name="ghostDialogTitle">유체화</string>
    <!-- 여기 까지 -->

    <!-- 유니버스 -->
    <string name="universe_tab_champion">챔피언</string>
    <string name="universe_tab_region">지역</string>
    <string name="universe_tab_novel">단편소설</string>
    <string name="universe_tab_comic">코믹</string>
    <string name="universe_tab_video">영상</string>

    <string name="universe_region_void">공허</string>
    <string name="universe_region_shadowisles">그림자군도</string>
    <string name="universe_region_noxus">녹서스</string>
    <string name="universe_region_demacia">데마시아</string>
    <string name="universe_region_bandle_city">밴들시티</string>
    <string name="universe_region_bilgewater">빌지워터</string>
    <string name="universe_region_shurima">슈리마</string>
    <string name="universe_region_ionia">아이오니아</string>
    <string name="universe_region_ixital">이쉬탈</string>
    <string name="universe_region_zaun">자운</string>
    <!-- 여기까지 -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="item">아이템</string>
    <string name="spash_lol">롤 사전</string>
    <string name="lolspell2">칼바람 스펠</string>


    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <string name="Q">Q</string>
    <string name="W">W</string>
    <string name="E">E</string>
    <string name="R">R</string>

    <string name="item_name">아이템 이름</string>
    <string name="finish">완료</string>
    <string name="init_champion_start">챔피온 정보를 초기화합니다.</string>
    <string name="init_item_start">아이템 정보를 초기화합니다.</string>
    <string name="init_summoner_start">스펠 정보를 초기화합니다.</string>
    <string name="init_tier_start">챔피언 티어 정보를 초기화합니다.</string>
    <string name="item_filter">아이템 필터</string>
    <string name="summoners_canyon">소환사의 협곡</string>

    <string name="all_item">모든 아이템</string>
    <string name="start_item">시작 아이템</string>
    <string name="specialization_item">특화</string>
    <string name="defense_item">방어력</string>
    <string name="attack_item">공격력</string>
    <string name="magic_item">마법력</string>
    <string name="movement_item">이동 속도</string>

    <string name="all_item_filter1">신화급</string>
    <string name="all_item_filter2">전설급</string>
    <string name="all_item_filter3">서사급</string>
    <string name="all_item_filter4">기본</string>

    <string name="start_item_filter1">공격로</string>
    <string name="start_item_filter2">정글</string>

    <string name="specialization_item_filter1">소모품</string>
    <string name="specialization_item_filter2">골드획득</string>
    <string name="specialization_item_filter3">시야</string>
    <string name="specialization_item_filter4">장신구</string>

    <string name="defense_item_filter1">체력</string>
    <string name="defense_item_filter2">방어력</string>
    <string name="defense_item_filter3">마법 저항</string>
    <string name="defense_item_filter4">체력 회복</string>

    <string name="attack_item_filter1">공격력</string>
    <string name="attack_item_filter2">치명타</string>
    <string name="attack_item_filter3">공격 속도</string>
    <string name="attack_item_filter4">생명력 흡수</string>
    <string name="attack_item_filter5">방어구 관통력</string>

    <string name="magic_item_filter1">주문력</string>
    <string name="magic_item_filter2">마법 관통력</string>
    <string name="magic_item_filter3">스킬 가속</string>
    <string name="magic_item_filter4">마나</string>
    <string name="magic_item_filter5">마나 회복</string>

    <string name="movement_item_filter1">장화</string>
    <string name="movement_item_filter2">기타 이동 관련</string>

    <!-- 내 빌드 -->
    <string name="mybuild_item_menu_edit">편집</string>
    <string name="mybuild_item_menu_buildstats">빌드 통계</string>
    <string name="mybuild_item_menu_reorder">재주문</string>
    <string name="mybuild_item_menu_delete">삭제</string>
    <!-- 여기까지 -->

    <string name="champion_name">챔피언 이름</string>
    <string name="Info">정보</string>

    <string name="item_combination">아이템 조합법</string>
    <string name="item_upper_build">상위 빌드</string>
    <string name="price">가격</string>
    <string name="sell">팔기</string>

    <!-- summoner -->
    <string name="summoner_tab_favorite">즐겨찾기</string>
    <string name="summoner_tab_recent">최근 보기</string>
    <string name="summoner_fab_none">즐겨찾기가 없습니다.</string>

    <string name="skin_tab_champion">챔피언별</string>
    <string name="skin_tab_theme">스킨 테마별</string>

    <string name="lolText">리그 오브 레전드</string>
    <string name="knifeWind">칼바람</string>
    <string name="dominationText">지배</string>
    <string name="dominationDesText">사냥감 추격 및 처치</string>
    <string name="mainRuneText">핵심 룬</string>
    <string name="precisionText">정밀</string>
    <string name="precisionDesText">전설의 시작</string>
    <string name="resolveText">결의</string>
    <string name="resolveDesText">끈질긴 생명력</string>
    <string name="sorceryText">마법</string>
    <string name="sorceryDesText">강력한 파괴력</string>
    <string name="whimsyText">영감</string>
    <string name="whimsyDesText">비범한 능력</string>
</resources>

