<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.build.detail.MyBuild.SkillBuildDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <HorizontalScrollView
            android:id="@+id/editSkillBuildTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow
                    android:id="@+id/QRow">
                    <TextView
                        style="@style/EditSkillBuildTextView"
                        android:text="@string/Q"/>
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView"
                        android:background="#FFFFCC"/>
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView"
                        android:background="#FFFFCC"/>
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView"
                        android:background="#FFFFCC"/>
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />

                </TableRow>

                <TableRow
                    android:id="@+id/WRow">
                    <TextView
                        style="@style/EditSkillBuildTextView"
                        android:text="@string/W"/>
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView"
                        android:background="#FFFFCC"/>
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView"
                        android:background="#FFFFCC"/>
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView"
                        android:background="#FFFFCC"/>
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                </TableRow>

                <TableRow
                    android:id="@+id/ERow">
                    <TextView
                        style="@style/EditSkillBuildTextView"
                        android:text="@string/E"/>
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView"
                        android:background="#FFFFCC"/>
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView"
                        android:background="#FFFFCC"/>
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView"
                        android:background="#FFFFCC"/>
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                </TableRow>

                <TableRow
                    android:id="@+id/RRow">
                    <TextView
                        style="@style/EditSkillBuildTextView"
                        android:text="@string/R"/>
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView"
                        android:background="#FFFFCC"/>
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView"
                        android:background="#FFFFCC"/>
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView"
                        android:background="#FFFFCC"/>
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                    <TextView
                        style="@style/EditSkillBuildTextView" />
                </TableRow>
            </TableLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/skillBuildCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:layout_marginRight="15dp"
            app:layout_constraintTop_toBottomOf="@+id/editSkillBuildTable"
            app:layout_constraintRight_toLeftOf="@+id/skillBuildConfirm"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/skillBuildConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textSize="20sp"
            android:layout_marginRight="15dp"
            app:layout_constraintTop_toBottomOf="@+id/editSkillBuildTable"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>